--- a/AfficheurGPS/AfficheurGPS.csproj
+++ b/AfficheurGPS/AfficheurGPS.csproj
@@ -87,6 +87,7 @@
     <Content Include="NoGPS.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="WaitingGPS.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
