+ Ajout thread pour récupérer la position avec fonction de callback

--- a/AfficheurGPS/AfficheurGPS.csproj
+++ b/AfficheurGPS/AfficheurGPS.csproj
@@ -87,7 +87,9 @@
     <Content Include="NoGPS.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="WaitingGPS.html" />
+    <Content Include="WaitingGPS.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
