+ Message confirmation que tout va bien + credentials à jour

--- a/AfficheurGPS/AfficheurGPS.csproj
+++ b/AfficheurGPS/AfficheurGPS.csproj
@@ -116,6 +116,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="WaitingGen.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="NoGPS.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
